--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -10,7 +10,7 @@
 
 .border-todo {
   border-left: dashed 2px #04C586;
-  height: 100%;  
+  height: 100%;
 }
 
 .list {
@@ -25,3 +25,12 @@
     margin: 20px;
     padding: 20px;
   }
+
+
+.comment-infos{
+  display: flex;
+}
+
+.push{
+  margin-left: auto;
+}
