final front edits

--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -99,3 +99,16 @@
 .h-523 {
   height: 523.519px;
 }
+
+.m-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.total-link a{
+  text-decoration: none;
+}
+
+.graph-image{
+  height: 12px;
+}
