--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -10,12 +10,12 @@
           <div class="d-flex justify-content-between" style="margin-bottom: -50px; margin-top: -30px">
 
               <div class="card-dash-bis p-4 text-start" style="min-width: 70%; color: grey">
-                <h4 style="font-size: 1rem">Total Expenditures</h4>
+                <h4 style="font-size: 1rem"><%= image_tag("gr.png", :alt => "up line graph", class: "graph-image") %> Total Expenditures</h4>
                 <h2 style="font-size: 2rem; color: red"> <strong> € <%= number_with_delimiter(@total_expenditures, :delimiter => ',') %></strong></h2>
               </div>
 
               <div class="card-dash-bis p-4 text-start" style="min-width: 60%; color: grey">
-                <h4 style="font-size: 1rem">Total Sales</h4>
+                <h4 style="font-size: 1rem"><%= image_tag("gg.png", :alt => "up line graph", class: "graph-image") %> Total Sales</h4>
                 <h2 style="font-size: 2rem"> <strong class="highlight text-center"> € <%= number_with_delimiter(@total_sales, :delimiter => ',') %></strong></h2>
               </div>
           </div>
@@ -26,7 +26,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Monthly Expenditures</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Keep track of your outgoing cash, although you have to spend money to make money, it also pays to be prudent!"></i>
           </div>
           <br>
             <%= column_chart @report.lines.annual_expenditures, prefix: "€", thousands: ",", download: true, colors: ["#04C586", "#04C586"] %>
@@ -40,7 +40,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Expenditures per category</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Where are you spending your money?"></i>
           </div>
           <br>
           <%= pie_chart Line.top_expenditures_subcategory, prefix: "€", thousands: ",", download: true, donut: true, legend: false %>
