--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -10,7 +10,7 @@
         <div class="d-flex justify-content-between" style="margin-bottom: -50px; margin-top: -30px">
 
           <div class="card-dash-bis p-4 text-start" style="min-width: 80%; color: grey">
-            <h4 style="font-size: 1rem">Total Sales</h4>
+            <h4 style="font-size: 1rem"><%= image_tag("gg.png", :alt => "up line graph", class: "graph-image") %> Total Sales</h4>
             <h2 style="font-size: 2rem"> <strong class="highlight text-center"> € <%= number_with_delimiter(@total_sales, :delimiter => ',') %></strong></h2>
           </div>
 
@@ -26,7 +26,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Monthly Sales</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Make sure to review your monthly sales, a strong business has steady sales throughout the year"></i>
           </div>
           <br>
         <%= column_chart @annual_sales, prefix: "€", thousands: ",", download: true, colors: ["#04C586", "#04C586"] %>
@@ -49,7 +49,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Top 5 sales this year</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Try not to be over reliant on one customer"></i>
           </div>
 
           <div class="top-table">
