--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -15,8 +15,8 @@
           </div>
 
           <div class="card-dash-bis p-4 text-start" style="min-width: 60%; color: grey">
-            <h4 style="font-size: 1rem">Volume of Sales</strong></h4>
-            <h2 style="font-size: 2rem; color: red"> <strong> <%= @sales.count %> </strong></h2>
+            <h4 style="font-size: 1rem"><%= image_tag("sales.png", :alt => "up line graph", class: "graph-image") %> Sales Volume</strong></h4>
+            <h2 style="font-size: 2rem; color: black"> <strong> <%= @sales.count %> </strong></h2>
           </div>
         </div>
         </div>
