--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -9,7 +9,7 @@
         <span class="file-name"></span>
         <%= f.file_field :csv_file, required: true, class: "mt-3", style: "display:none;" %>
       </div>
-      <%= f.button 'Upload', class: 'btn btn-flat mw', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Loading"} %>
+      <%= f.button 'Upload', class: 'btn btn-flat mw-btn', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Loading"} %>
   <% end %>
 </div>
 
